upgrade to latest nexus-release-plugin

--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     dependencies {
-        classpath 'se.alipsa.groovy:nexus-release-plugin:1.0.1'
+        classpath 'se.alipsa:nexus-release-plugin:1.0.1'
     }
 }
 plugins {
@@ -131,7 +131,7 @@ signing {
 
 if (project.ext.properties.sonatypeUsername) {
 
-    apply plugin: 'nexus-release-plugin'
+    apply plugin: 'se.alipsa.nexus-release-plugin'
     //apply plugin: 'se.alipsa.groovy.NexusReleasePlugin'
     nexusReleasePlugin.nexusUrl = nexusUrl
     nexusReleasePlugin.userName = sonatypeUsername
