--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -1,7 +1,7 @@
 import org.gradle.internal.os.OperatingSystem
 buildscript {
   dependencies {
-    classpath('se.alipsa.groovy:nexus-release-plugin:1.0.1')
+    classpath('se.alipsa:nexus-release-plugin:1.0.1')
   }
 }
 plugins {
@@ -182,7 +182,7 @@ signing {
 }
 
 if (project.ext.properties.sonatypeUsername) {
-  apply plugin: 'nexus-release-plugin'
+  apply plugin: 'se.alipsa.nexus-release-plugin'
   //apply plugin: 'se.alipsa.groovy.NexusReleasePlugin'
   nexusReleasePlugin.nexusUrl = nexusUrl
   nexusReleasePlugin.userName = sonatypeUsername
