--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -5,7 +5,7 @@ import java.util.concurrent.TimeUnit
 
 buildscript {
   dependencies {
-    classpath('se.alipsa.groovy:nexus-release-plugin:1.0.1')
+    classpath('se.alipsa:nexus-release-plugin:1.0.1')
   }
 }
 plugins {
@@ -172,7 +172,7 @@ signing {
 
 if (project.ext.properties.sonatypeUsername) {
 
-  apply plugin: 'nexus-release-plugin'
+  apply plugin: 'se.alipsa.nexus-release-plugin'
   //apply plugin: 'se.alipsa.groovy.NexusReleasePlugin'
   nexusReleasePlugin.nexusUrl = nexusUrl
   nexusReleasePlugin.userName = sonatypeUsername
