--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     dependencies {
-        classpath('se.alipsa.groovy:nexus-release-plugin:1.0.1')
+        classpath('se.alipsa:nexus-release-plugin:1.0.1')
     }
 }
 plugins {
@@ -128,7 +128,7 @@ signing {
 }
 
 if (project.ext.properties.sonatypeUsername) {
-    apply plugin: 'nexus-release-plugin'
+    apply plugin: 'se.alipsa.nexus-release-plugin'
     nexusReleasePlugin.nexusUrl = nexusUrl
     nexusReleasePlugin.userName = sonatypeUsername
     nexusReleasePlugin.password = sonatypePassword
