a getTableNames method to MatrixDbUtil, dont show empty password warning for h2, validate ConnectionInfo content, add getters for member variables. Add MatrixSqlFactory for easier creation. Add dependency on dependency-resolver to be able to lookup latest versipn of a dependency.

--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -13,7 +13,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '1.1.1'
+version = '1.1.2-SNAPSHOT'
 description = 'Groovy sql module for Matrix'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -64,9 +64,10 @@ dependencies {
         testImplementation('se.alipsa.matrix:matrix-core:2.2.0')
         testImplementation('se.alipsa.matrix:matrix-datasets:1.1.0')
     }*/
-    implementation 'se.alipsa.groovy:data-utils:1.0.6'
+    implementation 'se.alipsa.groovy:data-utils:1.0.7-SNAPSHOT'
     //implementation 'org.gradle:gradle-tooling-api:8.12' dont think we need this
     implementation 'commons-io:commons-io:2.18.0'
+    implementation 'se.alipsa.groovy:dependency-resolver:1.0.1-SNAPSHOT'
     implementation 'se.alipsa:maven-3.9.4-utils:1.0.3'
     //implementation 'org.apache.logging.log4j:log4j-api:2.24.1'
 
