--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -4,13 +4,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.alipsa.matrix</groupId>
   <artifactId>matrix-bom-tests</artifactId>
-  <version>1.1.2</version>
+  <version>1.1.3-SNAPSHOT</version>
   <name>Test of Matrix BOM</name>
   <packaging>jar</packaging>
   <url>https://github.com/Alipsa/matrix</url>
   <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit-jupiter.version>5.11.4</junit-jupiter.version>
     <slf4j.version>2.0.16</slf4j.version>
