--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -11,32 +11,21 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '1.1.1-SNAPSHOT'
+version = '2.0.0-SNAPSHOT'
 description = "Groovy library for importing and exporting json to and from a Matrix or Grid"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
     ? "https://oss.sonatype.org/content/repositories/snapshots/"
     : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
-task wrapper(type: Wrapper) {
-  def gv = '8.12'
-  gradleVersion = gv
-  distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
-  validateDistributionUrl = true
-}
-
-java {
-  toolchain {
-    languageVersion = JavaLanguageVersion.of(17)
-  }
-}
-
-tasks.withType(JavaCompile) {
+compileJava {
+  options.release = 21
   options.deprecation = true
+  options.compilerArgs << "-Xlint:unchecked"
 }
 
-tasks.withType(GroovyCompile) { task ->
-  task.options.deprecation = true
+compileGroovy {
+  options.deprecation = true
 }
 
 repositories {
