--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -20,15 +20,6 @@ ext.nexusUrl = version.contains("SNAPSHOT")
     ? "https://oss.sonatype.org/content/repositories/snapshots/"
     : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
-// For some reason this is required to upgrade the wrapper
-// Change the version and run 'gradle wrapper' to upgrade
-task wrapper(type: Wrapper) {
-    def gv = '8.12'
-    gradleVersion = gv //version required
-    distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
-    validateDistributionUrl = true
-}
-
 repositories {
     if (version.contains('SNAPSHOT')) {
         mavenLocal()
@@ -39,18 +30,14 @@ repositories {
     }
 }
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
-tasks.withType(JavaCompile) {
+compileJava {
+    options.release = 21
     options.deprecation = true
+    options.compilerArgs << "-Xlint:unchecked"
 }
 
-tasks.withType(GroovyCompile) { task ->
-    task.options.deprecation = true
+compileGroovy {
+    options.deprecation = true
 }
 
 dependencies {
