--- a/matrix-datasets/build.gradle
+++ b/matrix-datasets/build.gradle
@@ -16,20 +16,12 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '1.1.1-SNAPSHOT'
+version = '2.0.0-SNAPSHOT'
 description = "Groovy library common public domain and oss data in matrix format)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
     ? "https://oss.sonatype.org/content/repositories/snapshots/"
     : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-
-
-task wrapper(type: Wrapper) {
-    def gv = '8.12'
-    gradleVersion = gv
-    distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
-    validateDistributionUrl = true
-}
 
 repositories {
     if (version.contains('SNAPSHOT')) {
@@ -38,18 +30,14 @@ repositories {
     mavenCentral()
 }
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
-}
-
-tasks.withType(JavaCompile) {
+compileJava {
+    options.release = 21
     options.deprecation = true
+    options.compilerArgs << "-Xlint:unchecked"
 }
 
-tasks.withType(GroovyCompile) { task ->
-    task.options.deprecation = true
+compileGroovy {
+    options.deprecation = true
 }
 
 dependencies {
