--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -14,17 +14,8 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '1.1.1-SNAPSHOT'
+version = '2.0.0-SNAPSHOT'
 description = "Statistical hypothesis tests based on Matrix data."
-
-// For some reason this is required to upgrade the wrapper
-// Change the version and run 'gradle wrapper' to upgrade
-task wrapper(type: Wrapper) {
-  def gv = '8.12'
-  gradleVersion = gv //version required
-  distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
-  validateDistributionUrl = true
-}
 
 ext.nexusUrl = version.contains("SNAPSHOT")
     ? "https://oss.sonatype.org/content/repositories/snapshots/"
@@ -37,18 +28,14 @@ repositories {
   mavenCentral()
 }
 
-java {
-  toolchain {
-    languageVersion = JavaLanguageVersion.of(17)
-  }
-}
-
-tasks.withType(JavaCompile) {
+compileJava {
+  options.release = 21
   options.deprecation = true
+  options.compilerArgs << "-Xlint:unchecked"
 }
 
-tasks.withType(GroovyCompile) { task ->
-  task.options.deprecation = true
+compileGroovy {
+  options.deprecation = true
 }
 
 dependencies {
