--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -74,6 +74,10 @@
       <artifactId>matrix-charts</artifactId>
     </dependency>
     <dependency>
+      <groupId>se.alipsa.matrix</groupId>
+      <artifactId>matrix-xchart</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
       <version>1.20.4</version>
