--- a/matrix-xchart/build.gradle
+++ b/matrix-xchart/build.gradle
@@ -35,6 +35,11 @@ compileGroovy {
     options.deprecation = true
 }
 
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
 dependencies {
     compileOnly libs.groovy
     compileOnly project(':matrix-core')
@@ -55,4 +60,63 @@ test {
     // run using gradle -Pheadless=true test
     jvmArgs "-Dheadless=${project.hasProperty('headless') ? project.headless : false}"
     useJUnitPlatform()
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+            pom {
+                name = 'Groovy Matrix XCharts'
+                description = "${project.description}"
+                url = "https://github.com/Alipsa/matrix/matrix-xcharts"
+                licenses {
+                    license {
+                        name = 'MIT License'
+                        url = 'https://raw.githubusercontent.com/Alipsa/matrix/matrix-xcharts/master/LICENSE'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'perNyfelt'
+                        name = 'Per Nyfelt'
+                    }
+                }
+                scm {
+                    url = 'https://github.com/Alipsa/matrix/matrix-xcharts/tree/master'
+                    connection = 'scm:git:https://github.com/Alipsa/matrix.git'
+                    developerConnection = 'scm:git:https://github.com/Alipsa/matrix.git'
+                }
+            }
+        }
+    }
+    if (project.ext.properties.sonatypeUsername) {
+        repositories {
+            maven {
+                credentials {
+                    username = sonatypeUsername
+                    password = sonatypePassword
+                }
+                url = nexusUrl
+            }
+        }
+    }
+}
+
+
+signing {
+    if (project.properties['signing.keyId'] != null) {
+        project.logger.lifecycle("Signing artifacts...")
+        sign publishing.publications.maven
+    } else {
+        project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
+    }
+}
+
+if (project.ext.properties.sonatypeUsername) {
+    apply plugin: 'se.alipsa.nexus-release-plugin'
+    //apply plugin: 'se.alipsa.groovy.NexusReleasePlugin'
+    nexusReleasePlugin.nexusUrl = nexusUrl
+    nexusReleasePlugin.userName = sonatypeUsername
+    nexusReleasePlugin.password = sonatypePassword
 }
