change to task.register for javadoc and sources in matrix-core Generify AbstractChart.exportSwing

--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -99,12 +99,16 @@ test {
   }
 }
 
-task javadocJar(type: Jar, dependsOn: groovydoc) {
+
+tasks.register('javadocJar', Jar) {
+  dependsOn groovydoc
   archiveClassifier.set 'javadoc'
   from groovydoc.destinationDir
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
+
+tasks.register('sourcesJar', Jar) {
+  dependsOn classes
   archiveClassifier.set 'sources'
   from sourceSets.main.allSource
 }
