--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -47,14 +47,15 @@ dependencies {
     }*/
     compileOnly libs.groovy
 
-    api('com.google.cloud:google-cloud-bigquery:2.47.0')
+    api('com.google.cloud:google-cloud-bigquery:2.48.1')
 
-    implementation platform('com.google.auth:google-auth-library-bom:1.30.1')
+    implementation platform('com.google.auth:google-auth-library-bom:1.33.1')
     implementation 'com.google.auth:google-auth-library-oauth2-http'
 
     testImplementation libs.groovy
     testImplementation testLibs.junitJupiterApi
     testRuntimeOnly testLibs.junitJupiterEngine
+    testRuntimeOnly testLibs.junitPlatformLauncher
 }
 
 test {
