--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -12,8 +12,9 @@
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <junit-jupiter.version>5.11.4</junit-jupiter.version>
-    <slf4j.version>2.0.16</slf4j.version>
+    <junit-jupiter.version>5.12.0</junit-jupiter.version>
+    <junitPlatformVersion.version>1.12.0</junitPlatformVersion.version>
+    <slf4j.version>2.0.17</slf4j.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -106,6 +107,12 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-launcher</artifactId>
+      <version>${junitPlatformVersion.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
