--- a/matrix-datasets/build.gradle
+++ b/matrix-datasets/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     testImplementation libs.groovy
     testImplementation testLibs.junitJupiterApi
     testRuntimeOnly testLibs.junitJupiterEngine
+    testRuntimeOnly testLibs.junitPlatformLauncher
 }
 
 test {
