--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -54,8 +54,9 @@ dependencies {
   testImplementation libs.groovyJson
   testImplementation testLibs.junitJupiterApi
   testRuntimeOnly testLibs.junitJupiterEngine
-  testImplementation('com.fasterxml.jackson.core:jackson-core:2.18.0')
-  testImplementation('com.fasterxml.jackson.core:jackson-databind:2.18.0')
+  testRuntimeOnly testLibs.junitPlatformLauncher
+  testImplementation('com.fasterxml.jackson.core:jackson-core:2.18.3')
+  testImplementation('com.fasterxml.jackson.core:jackson-databind:2.18.3')
 }
 
 test {
