--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -49,9 +49,10 @@ dependencies {
     implementation('org.apache.poi:poi-ooxml:5.4.0')
     implementation 'com.github.miachm.sods:SODS:1.6.7'
 
-    testImplementation 'org.apache.logging.log4j:log4j-core:2.24.1'
+    testImplementation 'org.apache.logging.log4j:log4j-core:2.24.3'
     testImplementation testLibs.junitJupiterApi
     testRuntimeOnly testLibs.junitJupiterEngine
+    testRuntimeOnly testLibs.junitPlatformLauncher
     testImplementation libs.groovy
 }
 
