--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -66,7 +66,8 @@ dependencies {
     //testImplementation 'com.h2database:h2:2.2.224' // dynamically fetched so not needed
     testImplementation testLibs.junitJupiterApi
     testRuntimeOnly testLibs.junitJupiterEngine
-    testImplementation 'org.slf4j:slf4j-simple:2.0.16'
+    testRuntimeOnly testLibs.junitPlatformLauncher
+    testImplementation testLibs.slf4jSimple
     testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.24.3'
     testImplementation 'org.apache.logging.log4j:log4j-core:2.24.3'
 }
