--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -53,6 +53,7 @@ dependencies {
   implementation 'org.apache.commons:commons-math3:3.6.1'
   testImplementation libs.groovy
   testImplementation testLibs.junitJupiterApi
+  testRuntimeOnly testLibs.junitPlatformLauncher
   testImplementation("se.alipsa:jfinancials:1.0.0")
   testRuntimeOnly testLibs.junitJupiterEngine
 }
