Fix list projects implementation

--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     compileOnly libs.groovy
 
     api('com.google.cloud:google-cloud-bigquery:2.48.1')
-
+    implementation 'com.google.cloud:google-cloud-resourcemanager:1.61.0'
     implementation platform('com.google.auth:google-auth-library-bom:1.33.1')
     implementation 'com.google.auth:google-auth-library-oauth2-http'
 
