--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -1,17 +1,13 @@
-buildscript {
-    dependencies {
-        classpath 'se.alipsa:nexus-release-plugin:1.0.1'
-    }
-}
 plugins {
     id 'groovy'
     id 'java-library'
     id 'signing'
     id 'maven-publish'
+    id("se.alipsa.nexus-release-plugin") version "1.0.1"
 }
 
 group = 'se.alipsa.matrix'
-version = '0.2-SNAPSHOT'
+version = '0.2'
 description = "Groovy library for importing and exporting to and from Google BigQuery to a Matrix"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
@@ -48,7 +44,7 @@ dependencies {
     compileOnly libs.groovy
 
     api('com.google.cloud:google-cloud-bigquery:2.48.1')
-    implementation 'com.google.cloud:google-cloud-resourcemanager:1.61.0'
+    api 'com.google.cloud:google-cloud-resourcemanager:1.61.0'
     implementation platform('com.google.auth:google-auth-library-bom:1.33.1')
     implementation 'com.google.auth:google-auth-library-oauth2-http'
 
