--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.alipsa.matrix</groupId>
   <artifactId>matrix-bom-tests</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
   <name>Test of Matrix BOM</name>
   <packaging>jar</packaging>
   <url>https://github.com/Alipsa/matrix</url>
