--- a/matrix-parquet/build.gradle
+++ b/matrix-parquet/build.gradle
@@ -1,17 +1,13 @@
-buildscript {
-    dependencies {
-        classpath 'se.alipsa:nexus-release-plugin:1.0.1'
-    }
-}
 plugins {
     id 'groovy'
     id 'java-library'
     id 'signing'
     id 'maven-publish'
+    id("se.alipsa.nexus-release-plugin") version "1.0.1"
 }
 
 group = 'se.alipsa.matrix'
-version = '0.2-SNAPSHOT'
+version = '0.2'
 description = "Groovy library for importing and exporting parquet files to and from a Matrix"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
