--- a/matrix-tablesaw/build.gradle
+++ b/matrix-tablesaw/build.gradle
@@ -1,22 +1,17 @@
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
-buildscript {
-    dependencies {
-        classpath('se.alipsa:nexus-release-plugin:1.0.1')
-    }
-}
 
 plugins {
     id('groovy')
     id('java-library')
     id('signing')
     id('maven-publish')
-    //id('io.github.gradle-nexus.publish-plugin') version '2.0.0'
+    id("se.alipsa.nexus-release-plugin") version "1.0.1"
     id("com.github.ben-manes.versions").version("0.52.0")
 }
 
 group = 'se.alipsa.matrix'
-version = '1.0.0-SNAPSHOT'
+version = '0.1.0'
 description = 'Allows conversion between Matrix and Tablesaw'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
