set more classes to be compiled statically

--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.0.0'
+version = '2.0.1-SNAPSHOT'
 description = 'Groovy sql module for Matrix'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
