--- a/matrix-examples/candles/build.gradle
+++ b/matrix-examples/candles/build.gradle
@@ -24,19 +24,31 @@ java {
 }
 
 repositories {
-    mavenCentral()
+  mavenCentral()
+  mavenLocal()
 }
 
 dependencies {
-  def groovy4Version = "4.0.24"
   def tablesawVersion = "0.43.1"
   def slf4jVersion = "2.0.16"
   def log4j2Version = "2.24.0"
-  implementation "org.apache.groovy:groovy:$groovy4Version"
+  implementation libs.groovy
   implementation "tech.tablesaw:tablesaw-core:$tablesawVersion"
   implementation "tech.tablesaw:tablesaw-excel:$tablesawVersion"
   implementation "tech.tablesaw:tablesaw-aggregate:$tablesawVersion"
+  implementation("com.mitchellbosecke:pebble:2.4.0") // Upgrade of tablesaw dependency
+
   implementation "org.slf4j:slf4j-simple:$slf4jVersion"
+  implementation "se.alipsa.gi:gi-swing:1.0.0-SNAPSHOT"
   runtimeOnly "org.apache.logging.log4j:log4j-core:$log4j2Version"
+  testImplementation testLibs.junitJupiter
+  testImplementation testLibs.junitPlatformLauncher
+}
+
+test {
+  useJUnitPlatform()
+  testLogging {
+    showStandardStreams = true
+  }
 }
 
