--- a/settings.gradle
+++ b/settings.gradle
@@ -15,8 +15,8 @@ include 'matrix-json'
 include 'matrix-spreadsheet'
 include 'matrix-charts'
 include 'matrix-sql'
-//include 'matrix-examples:candles'
-//include 'matrix-examples:HousePrices'
+include 'matrix-examples:candles'
+include 'matrix-examples:HousePrices'
 include 'matrix-examples:LinearRegression'
 include 'matrix-examples:DecisionTree'
 include 'matrix-tablesaw'
