--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.2'
+version = '0.3-SNAPSHOT'
 description = "Groovy library for plotting with matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
