--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.3-SNAPSHOT'
+version = '0.3.0'
 description = "Groovy library for plotting with matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -58,19 +58,11 @@ dependencies {
   def javaFxVersion = '23.0.2'
   // compile only dependencies are not included in the pom
   compileOnly libs.groovy
-  //if (version.endsWith('SNAPSHOT')) {
-    compileOnly project(':matrix-core')
-    compileOnly project(':matrix-stats')
-    testImplementation project(':matrix-core')
-    testImplementation project(':matrix-stats')
-    testImplementation project(':matrix-datasets')
-  /*} else {
-    compileOnly('se.alipsa.matrix:matrix-core:2.3.0')
-    compileOnly('se.alipsa.matrix:matrix-stats:1.1.0')
-    testImplementation('se.alipsa.matrix:matrix-core:2.3.0')
-    testImplementation('se.alipsa.matrix:matrix-stats:1.1.0')
-    testImplementation('se.alipsa.matrix:matrix-datasets:1.1.0')
-  }*/
+  compileOnly project(':matrix-core')
+  compileOnly project(':matrix-stats')
+  testImplementation project(':matrix-core')
+  testImplementation project(':matrix-stats')
+  testImplementation project(':matrix-datasets')
   implementation("se.alipsa.groovy:gsvg:0.1.0")
 
   // One of these is enough
