--- a/matrix-tablesaw/build.gradle
+++ b/matrix-tablesaw/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.2.0-SNAPSHOT'
+version = '0.2.0'
 description = 'Allows conversion between Matrix and Tablesaw'
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -33,6 +33,11 @@ compileJava {
 
 compileGroovy {
     options.deprecation = true
+}
+
+java {
+    withJavadocJar()
+    withSourcesJar()
 }
 
 dependencies {
@@ -108,26 +113,12 @@ test {
     }
 }
 
-//Maven Central uploads
-task javadocJar(type: Jar, dependsOn: groovydoc) {
-    archiveClassifier.set 'javadoc'
-    from groovydoc.destinationDir
-}
-
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    archiveClassifier.set 'sources'
-    from sourceSets.main.allSource
-}
-
 publishing {
     publications {
         maven(MavenPublication) {
             from components.java
-            artifact(javadocJar)
-            artifact(sourcesJar)
             pom {
-                name = 'Groovy Data Utils'
+                name = 'Matrix-Tablesaw integration'
                 description = "${project.description}"
                 url = "https://github.com/Alipsa/matrix/main/matrix-tablesaw"
                 licenses {
@@ -150,6 +141,17 @@ publishing {
             }
         }
     }
+    if (project.ext.properties.sonatypeUsername) {
+        repositories {
+            maven {
+                credentials {
+                    username = sonatypeUsername
+                    password = sonatypePassword
+                }
+                url = nexusUrl
+            }
+        }
+    }
 }
 
 signing {
@@ -159,6 +161,13 @@ signing {
     } else {
         project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
     }
+}
+
+if (project.ext.properties.sonatypeUsername) {
+    apply plugin: 'se.alipsa.nexus-release-plugin'
+    nexusReleasePlugin.nexusUrl = nexusUrl
+    nexusReleasePlugin.userName = sonatypeUsername
+    nexusReleasePlugin.password = sonatypePassword
 }
 
 def isNonStable = { String version ->
